--- a/apk/res/values-ms/strings.xml
+++ b/apk/res/values-ms/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Alih ke bawah sekali"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Butang untuk menyeret dan menyusun semula <xliff:g id="SELECTED_APP">%s</xliff:g> dalam senarai keutamaan"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Butang mengalih keluar <xliff:g id="SELECTED_APP">%s</xliff:g> daripada senarai keutamaan"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"Butang untuk menyusun semula atau mengalih keluar <xliff:g id="SELECTED_APP">%s</xliff:g> daripada senarai sumber apl"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Ketik dua kali dan seret untuk menyusun semula apl"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"<xliff:g id="POSITION">%1$s</xliff:g> dalam senarai <xliff:g id="SELECTED_APP">%2$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"kecergasan, kesihatan"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"kebenaran"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, data kesihatan, kategori kesihatan, akses data, aktiviti, ukuran badan, penjejakan kitaran, pemakanan, tidur, vital"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Tambahkan apl"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Edit sumber apl"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Lalai peranti"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"Alih ke atas"</string>
+    <string name="move_down" msgid="4404970288236170693">"Alih ke bawah"</string>
+    <string name="remove" msgid="1340423400489007362">"Alih keluar"</string>
     <string name="app_data_title" msgid="6499967982291000837">"Data apl"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Data daripada <xliff:g id="APP_NAME">%1$s</xliff:g> akan dipaparkan di sini"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Data daripada apl dengan akses kepada Health Connect akan dipaparkan di sini"</string>
@@ -1170,10 +1165,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Padamkan entri <xliff:g id="APP_NAME">%1$s</xliff:g> yang dipilih untuk <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> secara kekal?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Padamkan entri <xliff:g id="APP_NAME">%s</xliff:g> ini secara kekal?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Padamkan data <xliff:g id="DATA_TYPE">%1$s</xliff:g> untuk <xliff:g id="APP_NAME">%2$s</xliff:g> secara kekal?"</string>
-    <!-- no translation found for menu_show_system (5608880605989914394) -->
-    <skip />
-    <!-- no translation found for menu_hide_system (9218325603953186714) -->
-    <skip />
+    <string name="menu_show_system" msgid="5608880605989914394">"Tunjukkan sistem"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"Sembunyikan sistem"</string>
     <string name="on" msgid="8266542510798355807">"Hidup"</string>
     <string name="off" msgid="6996623844428550649">"Mati"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Diakses <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
