--- a/apk/res/values-ur/strings.xml
+++ b/apk/res/values-ur/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"سب سے نیچے منتقل کریں"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"ترجیحی فہرست میں <xliff:g id="SELECTED_APP">%s</xliff:g> کو دوبارہ ترتیب دینے اور گھسیٹنے کیلئے بٹن"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"ترجیح کی فہرست سے <xliff:g id="SELECTED_APP">%s</xliff:g> کو ہٹانے کیلئے بٹن"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"‫<xliff:g id="SELECTED_APP">%s</xliff:g> کو دوبارہ ترتیب دینے یا ایپ کے ماخذات کی فہرست سے ہٹانے کا بٹن"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"دوبارہ ترتیب دینے کیلئے دوبار تھپتھپائیں و گھسیٹیں"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"‫<xliff:g id="SELECTED_APP">%2$s</xliff:g> فہرست میں <xliff:g id="POSITION">%1$s</xliff:g>"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"تندرستی، فلاح و بہبود"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"اجازتیں"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"ہیلتھ کنیکٹ، ہیلتھ ڈیٹا، صحت کے زمرے، ڈیٹا تک رسائی، سرگرمی، جسمانی پیمائشیں، سائیکل ٹریکنگ، غذائیت، نیند، وائٹلز"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"ایپ شامل کریں"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"ایپ کے مآخذ میں ترمیم کریں"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"آلہ ڈیفالٹ"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"اوپر منتقل کریں"</string>
+    <string name="move_down" msgid="4404970288236170693">"نیچے منتقل کریں"</string>
+    <string name="remove" msgid="1340423400489007362">"ہٹائیں"</string>
     <string name="app_data_title" msgid="6499967982291000837">"ایپ کا ڈیٹا"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> کا ڈیٹا یہاں دکھائی دے گا"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"‫Health Connect تک رسائی والی ایپس کا ڈیٹا یہاں ظاہر ہوگا"</string>
@@ -1170,10 +1165,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> کے لیے <xliff:g id="APP_NAME">%1$s</xliff:g> کے منتخب اندراجات کو مستقل طور پر حذف کریں؟"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"مستقل طور پر اس <xliff:g id="APP_NAME">%s</xliff:g> کے اندراج کو حذف کریں؟"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> کے لیے <xliff:g id="DATA_TYPE">%1$s</xliff:g> ڈیٹا کو مستقل طور پر حذف کریں؟"</string>
-    <!-- no translation found for menu_show_system (5608880605989914394) -->
-    <skip />
-    <!-- no translation found for menu_hide_system (9218325603953186714) -->
-    <skip />
+    <string name="menu_show_system" msgid="5608880605989914394">"سسٹم دکھائیں"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"سسٹم چھپائیں"</string>
     <string name="on" msgid="8266542510798355807">"آن"</string>
     <string name="off" msgid="6996623844428550649">"آف"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"<xliff:g id="TIME_DATE">%1$s</xliff:g> پر رسائی حاصل کی گئی"</string>
