--- a/apk/res/values-eu/strings.xml
+++ b/apk/res/values-eu/strings.xml
@@ -444,8 +444,7 @@
     <string name="manage_permissions_learn_more" msgid="2503189875093300767">"Irakurri pribatutasun-gidalerroak"</string>
     <string name="app_perms_content_provider_24h" msgid="5977152673988158889">"Azken 24 orduetan atzitu dira"</string>
     <string name="app_access_title" msgid="7137018424885371763">"Aplikazioak duen sarbidea"</string>
-    <!-- no translation found for connected_apps_empty_list_section_title (7684166767384190933) -->
-    <skip />
+    <string name="connected_apps_empty_list_section_title" msgid="7684166767384190933">"Ez dago aplikazio bateragarririk instalatuta"</string>
     <string name="additional_access_label" msgid="4645249249222528341">"Sarbide gehigarria"</string>
     <string name="additional_access_summary" msgid="1076197455435130191">"Iraganeko eta atzeko planoko datuak"</string>
     <string name="removed_additional_permissions_toast" msgid="3443687215509477284">"Kendu dira aplikazio honen baimen gehigarriak"</string>
@@ -1171,10 +1170,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Betiko ezabatu nahi dituzu <xliff:g id="APP_NAME">%1$s</xliff:g> aplikazioaren hautatutako sarrerak (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>)?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g> aplikazioaren sarrera hau betiko ezabatu nahi duzu?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> aplikazioak honi buruz dituen datuak (<xliff:g id="DATA_TYPE">%1$s</xliff:g>) ezabatu nahi dituzu?"</string>
-    <!-- no translation found for menu_show_system (5608880605989914394) -->
-    <skip />
-    <!-- no translation found for menu_hide_system (9218325603953186714) -->
-    <skip />
+    <string name="menu_show_system" msgid="5608880605989914394">"Erakutsi sistemaren aplikazioak"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"Ezkutatu sistemaren aplikazioak"</string>
     <string name="on" msgid="8266542510798355807">"Aktibatuta"</string>
     <string name="off" msgid="6996623844428550649">"Desaktibatuta"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Atzitze-data: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
