--- a/apk/res/values-ja/strings.xml
+++ b/apk/res/values-ja/strings.xml
@@ -1012,11 +1012,9 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"一番下に移動"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"優先度リスト内の <xliff:g id="SELECTED_APP">%s</xliff:g> をドラッグして順序を変更するボタンです"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"優先度リストから<xliff:g id="SELECTED_APP">%s</xliff:g>を削除するボタンです"</string>
-    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
-    <skip />
+    <string name="see_actions_button_content_description" msgid="2004104767369363475">"アプリのソースリストで <xliff:g id="SELECTED_APP">%s</xliff:g> の並べ替えや削除を行うボタン"</string>
     <string name="reorder_button_action_description" msgid="5197462036756192214">"並べ替えるにはダブルタップしてドラッグします"</string>
-    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
-    <skip />
+    <string name="priority_list_item_content_description" msgid="8792727829749801217">"リスト「<xliff:g id="SELECTED_APP">%2$s</xliff:g>」の <xliff:g id="POSITION">%1$s</xliff:g> 件目"</string>
     <string name="search_keywords_home" msgid="5386515593026555327">"フィットネス, 健康管理"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"権限"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"ヘルスコネクト, 健康に関するデータ, 健康に関するカテゴリ, データアクセス, アクティビティ, 身体測定, 月経周期の管理, 栄養, 睡眠, バイタル"</string>
@@ -1110,12 +1108,9 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"アプリを追加"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"アプリのソースを編集する"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"デバイスのデフォルト"</string>
-    <!-- no translation found for move_up (9136155291380319606) -->
-    <skip />
-    <!-- no translation found for move_down (4404970288236170693) -->
-    <skip />
-    <!-- no translation found for remove (1340423400489007362) -->
-    <skip />
+    <string name="move_up" msgid="9136155291380319606">"上に移動"</string>
+    <string name="move_down" msgid="4404970288236170693">"下に移動"</string>
+    <string name="remove" msgid="1340423400489007362">"削除"</string>
     <string name="app_data_title" msgid="6499967982291000837">"アプリデータ"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> からのデータがここに表示されます"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"ヘルスコネクトにアクセスできるアプリのデータがここに表示されます"</string>
