--- a/apk/res/values-ko/strings.xml
+++ b/apk/res/values-ko/strings.xml
@@ -1170,10 +1170,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>에 해당하는 선택한 <xliff:g id="APP_NAME">%1$s</xliff:g> 항목을 완전히 삭제하시겠습니까?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"이 <xliff:g id="APP_NAME">%s</xliff:g> 항목을 완전히 삭제하시겠습니까?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g>의 <xliff:g id="DATA_TYPE">%1$s</xliff:g> 데이터를 완전히 삭제하시겠습니까?"</string>
-    <!-- no translation found for menu_show_system (5608880605989914394) -->
-    <skip />
-    <!-- no translation found for menu_hide_system (9218325603953186714) -->
-    <skip />
+    <string name="menu_show_system" msgid="5608880605989914394">"시스템 표시"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"시스템 숨기기"</string>
     <string name="on" msgid="8266542510798355807">"사용"</string>
     <string name="off" msgid="6996623844428550649">"사용 안함"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"<xliff:g id="TIME_DATE">%1$s</xliff:g>에 액세스함"</string>
