--- a/apk/res/values-lv/strings.xml
+++ b/apk/res/values-lv/strings.xml
@@ -613,7 +613,7 @@
     <string name="steps_value" msgid="5779393974668105298">"{count,plural, =1{1 solis}zero{# soļu}one{# solis}other{# soļi}}"</string>
     <string name="steps_per_minute" msgid="5527133010067502098">"{value,plural, =1{1 solis/min}zero{# soļu/min}one{# solis/min}other{# soļi/min}}"</string>
     <string name="steps_per_minute_long" msgid="6146224261144843301">"{value,plural, =1{1 solis minūtē}zero{# soļu minūtē}one{# solis minūtē}other{# soļi minūtē}}"</string>
-    <string name="heart_rate_value" msgid="6936476566204248578">"{count,plural, =1{1 sit./min}zero{# sit./min}one{# sit./min}other{# sit./min}}"</string>
+    <string name="heart_rate_value" msgid="6936476566204248578">"{count,plural, =1{1 bpm}zero{# bpm}one{# bpm}other{# bpm}}"</string>
     <string name="heart_rate_long_value" msgid="7865319425119507300">"{count,plural, =1{1 sitiens minūtē}zero{# sitienu minūtē}one{# sitiens minūtē}other{# sitieni minūtē}}"</string>
     <string name="velocity_speed_miles" msgid="616312758726506781">"{value,plural, =1{1 jūdze/h}zero{# jūdžu/h}one{# jūdze/h}other{# jūdzes/h}}"</string>
     <string name="velocity_speed_km" msgid="2807705003203399350">"{value,plural, =1{1 km/h}zero{# km/h}one{# km/h}other{# km/h}}"</string>
@@ -1170,10 +1170,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Vai neatgriezeniski dzēst atlasītos lietotnes <xliff:g id="APP_NAME">%1$s</xliff:g> ierakstus par šo mēnesi: <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Vai neatgriezeniski dzēst šo lietotnes <xliff:g id="APP_NAME">%s</xliff:g> ierakstu?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Vai neatgriezeniski dzēst datus (<xliff:g id="DATA_TYPE">%1$s</xliff:g>) lietotnei <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
-    <!-- no translation found for menu_show_system (5608880605989914394) -->
-    <skip />
-    <!-- no translation found for menu_hide_system (9218325603953186714) -->
-    <skip />
+    <string name="menu_show_system" msgid="5608880605989914394">"Rādīt sistēmas lietotnes"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"Paslēpt sistēmas lietotnes"</string>
     <string name="on" msgid="8266542510798355807">"Ieslēgts"</string>
     <string name="off" msgid="6996623844428550649">"Izslēgts"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Pēdējā piekļuves reize: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
