--- a/apk/res/values-or/strings.xml
+++ b/apk/res/values-or/strings.xml
@@ -1170,10 +1170,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> ପାଇଁ ଚୟନିତ <xliff:g id="APP_NAME">%1$s</xliff:g> ଏଣ୍ଟ୍ରିଗୁଡ଼ିକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"ଏହି <xliff:g id="APP_NAME">%s</xliff:g> ଏଣ୍ଟ୍ରିକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> ପାଇଁ <xliff:g id="DATA_TYPE">%1$s</xliff:g> ଡାଟାକୁ ସ୍ଥାୟୀ ଭାବେ ଡିଲିଟ କରିବେ?"</string>
-    <!-- no translation found for menu_show_system (5608880605989914394) -->
-    <skip />
-    <!-- no translation found for menu_hide_system (9218325603953186714) -->
-    <skip />
+    <string name="menu_show_system" msgid="5608880605989914394">"ସିଷ୍ଟମ ଦେଖାନ୍ତୁ"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"ସିଷ୍ଟମକୁ ଲୁଚାନ୍ତୁ"</string>
     <string name="on" msgid="8266542510798355807">"ଚାଲୁ ଅଛି"</string>
     <string name="off" msgid="6996623844428550649">"ବନ୍ଦ ଅଛି"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"<xliff:g id="TIME_DATE">%1$s</xliff:g>ରେ ଆକ୍ସେସ କରାଯାଇଛି"</string>
