--- a/apk/res/values-sw/strings.xml
+++ b/apk/res/values-sw/strings.xml
@@ -1170,10 +1170,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Ungependa kufuta kabisa data uliyochagua ya <xliff:g id="APP_NAME">%1$s</xliff:g> ya <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Ungependa kufuta kabisa data hii ya <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Ungependa kufuta kabisa data ya <xliff:g id="DATA_TYPE">%1$s</xliff:g> kwenye <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
-    <!-- no translation found for menu_show_system (5608880605989914394) -->
-    <skip />
-    <!-- no translation found for menu_hide_system (9218325603953186714) -->
-    <skip />
+    <string name="menu_show_system" msgid="5608880605989914394">"Onyesha mfumo"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"Ficha mfumo"</string>
     <string name="on" msgid="8266542510798355807">"Kimewashwa"</string>
     <string name="off" msgid="6996623844428550649">"Kimezimwa"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Kilifunguliwa <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
