--- a/apk/res/values-ta/strings.xml
+++ b/apk/res/values-ta/strings.xml
@@ -1170,10 +1170,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"தேர்ந்தெடுக்கப்பட்ட <xliff:g id="APP_NAME">%1$s</xliff:g> ஆப்ஸின் <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>க்கான பதிவுகளை நிரந்தரமாக நீக்கவா?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"இந்த <xliff:g id="APP_NAME">%s</xliff:g> ஆப்ஸின் பதிவை நிரந்தரமாக நீக்கவா?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> ஆப்ஸுக்கான <xliff:g id="DATA_TYPE">%1$s</xliff:g> தரவை நிரந்தரமாக நீக்கவா?"</string>
-    <!-- no translation found for menu_show_system (5608880605989914394) -->
-    <skip />
-    <!-- no translation found for menu_hide_system (9218325603953186714) -->
-    <skip />
+    <string name="menu_show_system" msgid="5608880605989914394">"சிஸ்டம் ஆப்ஸைக் காட்டுதல்"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"சிஸ்டம் ஆப்ஸை மறைத்தல்"</string>
     <string name="on" msgid="8266542510798355807">"ஆன்"</string>
     <string name="off" msgid="6996623844428550649">"ஆஃப்"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"அணுகிய நேரம்: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
